# Agent-Repair

./: .gitattributes  .gitignore  README.md  pyproject.toml
baselines/gemini_2_5_pro_lagent/task108/: official_rescore_result.json  prediction.json
baselines/gemini_2_5_pro_lagent/task111/: official_rescore_result.json  prediction.json
baselines/gemini_2_5_pro_lagent/task121/: official_rescore_result.json  prediction.json
baselines/gemini_2_5_pro_lagent/task122/: official_rescore_result.json  prediction.json
baselines/gemini_2_5_pro_lagent/task127/: prediction.json  (+1 more)
configs/heldout20/: heldout20_full_ours_rows.json  heldout20_router_registry_gemini.json  repair_module_routes.csv  repair_module_routes.json
docs/: EXPERIMENT_KB_v3.1.md  SETUP_GTA2_VENDOR.md
scripts/: apply_non_regression_gate.py  calibrate_gta_official_selection_epsilon.py  compare_checkpoint_scores.py  gta2_responses_scorer.py  launch_yunwu_strict_gta2_matrix.py  provider_runtime.py  repair_evaluator.py  run_heldout20_full_ours_candidate_generation.py  run_two_task_method_baselines.py  run_yunwu_model_suite.py  score_candidate_with_gta2_gemini_evaluator.py  score_candidate_with_gta2_responses_evaluator.py  score_candidate_with_official_evaluator.py  score_prediction_with_gta2_gemini_evaluator.py  score_prediction_with_gta2_responses_evaluator.py  score_prediction_with_official_evaluator.py  scorer_runtime.py  tool_repair_planner.py  verify_opencompass_artifact_gate.py
scripts/v3.1/: run_full_ours_gemini_preservation_search.py
tests/: test_materializer.py  test_repair_evaluator.py
(+43 files in other folders)
