[project]
name = "agent-repair"
version = "0.1.0"
description = "Preservation-aware agent repair experiments on GTA-2 checkpoint tasks."
requires-python = ">=3.10,<3.12"
dependencies = [
    "datasets>=2.19.1",
    "opencv-python-headless>=4.10.0",
    "openai>=1.99.0",
    "mmengine>=0.10.7",
    "sentence-transformers>=2.2.2",
    "torch>=2.6.0",
    "python-docx>=1.2.0",
    "python-pptx>=0.6.23",
    "reportlab>=4.5.0",
    "requests>=2.31.0",
    "tqdm>=4.64.0",
    "evaluate>=0.4.6",
]

[tool.uv]
package = false
